syntax="proto3";
option java_package="top.carljung.bill.proto";
option java_outer_classname="PBStore";

message User{
    int32 userId = 1;
    string username = 2;
    string password = 3;
}

enum BillType{
    DEFAULT = 0;
    INCOME = 1;
    PAYMENT = 2;
}

message Bill{
    int32 id = 1;
    BillType type = 2;
    int32 labelId = 3;
    double money = 4;
}

message BillList{
    repeated Bill bills = 1;
}

message Label{
    int32 id = 1;
    string name = 2;
}